--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,13 @@
             <artifactId>poi-ooxml</artifactId>
             <version>5.2.3</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.dhatim/fastexcel -->
+        <dependency>
+            <groupId>org.dhatim</groupId>
+            <artifactId>fastexcel</artifactId>
+            <version>0.18.1</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
