--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,18 @@
             <version>0.18.1</version>
         </dependency>
 
+<!--        cấu hình debezium-->
+        <dependency>
+            <groupId>io.debezium</groupId>
+            <artifactId>debezium-embedded</artifactId>
+            <version>2.2.0.Final</version>
+        </dependency>
+        <!-- Debezium Connector for MySQL -->
+        <dependency>
+            <groupId>io.debezium</groupId>
+            <artifactId>debezium-connector-mysql</artifactId>
+            <version>2.2.0.Final</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
