--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
             <artifactId>auto-service</artifactId>
             <version>1.1.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/io.prestosql/presto-jdbc -->
+        <dependency>
+            <groupId>io.prestosql</groupId>
+            <artifactId>presto-jdbc</artifactId>
+            <version>345</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
